--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation project(':library')
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
 }
